--- a/feedbackSystem/base/templates/base/home.html
+++ b/feedbackSystem/base/templates/base/home.html
@@ -8,20 +8,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="{% static 'img/rp_logo.png' %}">
-    <title>{% block title %}{% translate "Police Feedback System" %}{% endblock %}</title>
+    <title>{% block title %}{% translate "Home" %}{% endblock %} - {% translate "Police Feedback System" %}</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     {% block scripts %}{% endblock %}
 </head>
-<body>
+<body style="background-color: ghostwhite">
     {% block header %}
-    <img src="{% static 'img/rp_logo.png' %}" width="50" height="50">
-    <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
-        <input name="next" type="hidden" value="{{ request.get_full_path }}">
-        <select name="language" aria-label="Select Language">
-            <option value="en"{% if "en" == LANGUAGE_CODE or "en" == request.COOKIES.django_language %} selected{% endif %}>English</option>
-            <option value="hi"{% if "hi" == LANGUAGE_CODE or "hi" == request.COOKIES.django_language %} selected{% endif %}>हिन्दी</option>
-        </select>
-        <input type="submit" value="Set">
-    </form>
+    <div class="container">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+          <div class="col-md-3 mb-2 mb-md-0">
+            <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+              <img class="bi" src="{% static 'img/rp_logo.png' %}" width="32" height="32" role="img" aria-label="Rajasthan Police"></img>
+            </a>
+          </div>
+    
+          <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="{% url 'siteIndex' %}" class="nav-link px-2">{% translate "Home" %}</a></li>
+            <li><a href="{% url 'feedbackIndex' %}" class="nav-link px-2">{% translate "Feedback" %}</a></li>
+            <li><a href="{% url 'accessIndex' %}" class="nav-link px-2">{% translate "Staff Dashboard" %}</a></li>
+          </ul>
+    
+          <div class="col-md-3 text-end">
+            {% if user.is_authenticated %}
+            <span class="me-2">{{ user.first_name }}</span>
+            <a class="btn btn-outline-primary me-2" href="{% url 'siteLogout' %}?next={{ request.path|urlencode }}" role="button">{% translate "Log Out" %}</a>
+            {% else %}
+            <a class="btn btn-outline-primary me-2" href="{% url 'siteLogin' %}" role="button">{% translate "Login" %}</a>
+            <a class="btn btn-primary" href="{% url 'siteSignup' %}" role="button">{% translate "Sign Up" %}</a>
+            {% endif %}
+            <form class="d-inline-block" action="{% url 'set_language' %}?next={{ request.get_full_path }}" method="post">{% csrf_token %}
+                <select class="form-select" name="language" aria-label="Select Language" onchange="this.form.submit()">
+                    <option value="en"{% if "en" == LANGUAGE_CODE or "en" == request.COOKIES.django_language %} selected{% endif %}>English</option>
+                    <option value="hi"{% if "hi" == LANGUAGE_CODE or "hi" == request.COOKIES.django_language %} selected{% endif %}>हिन्दी</option>
+                </select>
+            </form>
+          </div>
+        </header>
+    </div>
     {% endblock %}
 
     {% block content %}
